<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:gravity="center"
    android:minWidth="200dp"
    android:layout_margin="@dimen/dialog_margin_around"
    android:background="@color/background_light"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dialog_margin_vertical_small"
    android:paddingLeft="@dimen/dialog_margin_vertical"
    android:paddingRight="@dimen/dialog_margin_vertical"
    android:paddingTop="@dimen/dialog_margin_vertical_small"
    android:theme="@style/SimpleDialogTheme">

    <TextView
        android:id="@+id/add_dialog_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default4"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/your_prediction"
        android:textColor="@color/gray_dark"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/add_dialog_team1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default4"
        android:text="@string/team"
        android:textColor="@color/black"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/add_dialog_tv_score1_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_five"
            android:text="@string/minus"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/add_dialog_tv_score1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_five"
            android:text="@string/score0"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_dialog_tv_score1_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_five"
            android:text="@string/plus"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/add_dialog_tv_score2_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_five"
            android:padding="1dip"
            android:text="@string/minus"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/add_dialog_tv_score2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_five"
            android:text="@string/score0"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_dialog_tv_score2_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_five"
            android:padding="1dip"
            android:text="@string/plus"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/add_dialog_team2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default4"
        android:text="@string/team"
        android:textColor="@color/black"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />


    <Button
        android:id="@+id/add_dialog_bt_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/submit"
         />


</LinearLayout>