...
        android:id="@+id/matches_srl"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_matches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_five"
        android:layout_marginBottom="@dimen/margin_five"
        android:scrollbars="vertical"
        android:visibility="visible" />
...
