...
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/reload"
        android:visibility="gone" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/results_srl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_results"
...
