...
            tools:text="@string/app_name" />

        <ProgressBar
            android:id="@+id/toolbar_progressbar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_toLeftOf="@+id/toolbar_bt_next"
            android:layout_toStartOf="@+id/toolbar_bt_next"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:indeterminate="true"
            android:visibility="gone" />

...
